--- a/notebooks/1.ETL_status.ipynb
+++ b/notebooks/1.ETL_status.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\DaniloAraneda\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "c:\\Users\\DaniloAraneda\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\.libs\\libopenblas.fb5ae2tyxyh2ijrdkgdgq3xbklktf43h.gfortran-win_amd64.dll\n",
+      "c:\\Users\\DaniloAraneda\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\.libs\\libopenblas64__v0.3.21-gcc_10_3_0.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mongo_conn: None, mongo_db: None from cloud_inputstream.py\n",
+      "mongo_conn: None, mongo_db: None from init.py\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -26,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +139,7 @@
        "4  Richard Alfredo   user"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,73 +231,73 @@
        "      <th>0</th>\n",
        "      <td>John Doe</td>\n",
        "      <td>admin</td>\n",
-       "      <td>C302</td>\n",
+       "      <td>C303</td>\n",
        "      <td>active</td>\n",
-       "      <td>82</td>\n",
-       "      <td>2024-10-28T20:29:04.448645</td>\n",
-       "      <td>2024-10-28T20:34:04.449645</td>\n",
+       "      <td>96</td>\n",
+       "      <td>2024-10-29T11:36:09.452580</td>\n",
+       "      <td>2024-10-29T11:41:09.453093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Jane Doe</td>\n",
        "      <td>user</td>\n",
        "      <td>C301</td>\n",
-       "      <td>error</td>\n",
-       "      <td>76</td>\n",
-       "      <td>2024-10-28T20:29:04.448645</td>\n",
-       "      <td>2024-10-28T20:34:04.449645</td>\n",
+       "      <td>active</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2024-10-29T11:36:09.452580</td>\n",
+       "      <td>2024-10-29T11:41:09.453093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>John Smith</td>\n",
        "      <td>user</td>\n",
        "      <td>C303</td>\n",
-       "      <td>active</td>\n",
+       "      <td>error</td>\n",
        "      <td>69</td>\n",
-       "      <td>2024-10-28T20:29:04.448645</td>\n",
-       "      <td>2024-10-28T20:34:04.449645</td>\n",
+       "      <td>2024-10-29T11:36:09.452580</td>\n",
+       "      <td>2024-10-29T11:41:09.453093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Smith Alfred</td>\n",
        "      <td>user</td>\n",
-       "      <td>C301</td>\n",
-       "      <td>active</td>\n",
-       "      <td>57</td>\n",
-       "      <td>2024-10-28T20:29:04.448645</td>\n",
-       "      <td>2024-10-28T20:34:04.449645</td>\n",
+       "      <td>C303</td>\n",
+       "      <td>error</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2024-10-29T11:36:09.452580</td>\n",
+       "      <td>2024-10-29T11:41:09.453093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Richard Alfredo</td>\n",
        "      <td>user</td>\n",
-       "      <td>C301</td>\n",
-       "      <td>active</td>\n",
-       "      <td>97</td>\n",
-       "      <td>2024-10-28T20:29:04.448645</td>\n",
-       "      <td>2024-10-28T20:34:04.449645</td>\n",
+       "      <td>C303</td>\n",
+       "      <td>inactive</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2024-10-29T11:36:09.452580</td>\n",
+       "      <td>2024-10-29T11:41:09.453093</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              name   role machines  status  ton                    start_on  \\\n",
-       "0         John Doe  admin     C302  active   82  2024-10-28T20:29:04.448645   \n",
-       "1         Jane Doe   user     C301   error   76  2024-10-28T20:29:04.448645   \n",
-       "2       John Smith   user     C303  active   69  2024-10-28T20:29:04.448645   \n",
-       "3     Smith Alfred   user     C301  active   57  2024-10-28T20:29:04.448645   \n",
-       "4  Richard Alfredo   user     C301  active   97  2024-10-28T20:29:04.448645   \n",
+       "              name   role machines    status  ton                    start_on  \\\n",
+       "0         John Doe  admin     C303    active   96  2024-10-29T11:36:09.452580   \n",
+       "1         Jane Doe   user     C301    active   21  2024-10-29T11:36:09.452580   \n",
+       "2       John Smith   user     C303     error   69  2024-10-29T11:36:09.452580   \n",
+       "3     Smith Alfred   user     C303     error   59  2024-10-29T11:36:09.452580   \n",
+       "4  Richard Alfredo   user     C303  inactive    0  2024-10-29T11:36:09.452580   \n",
        "\n",
        "                       end_on  \n",
-       "0  2024-10-28T20:34:04.449645  \n",
-       "1  2024-10-28T20:34:04.449645  \n",
-       "2  2024-10-28T20:34:04.449645  \n",
-       "3  2024-10-28T20:34:04.449645  \n",
-       "4  2024-10-28T20:34:04.449645  "
+       "0  2024-10-29T11:41:09.453093  \n",
+       "1  2024-10-29T11:41:09.453093  \n",
+       "2  2024-10-29T11:41:09.453093  \n",
+       "3  2024-10-29T11:41:09.453093  \n",
+       "4  2024-10-29T11:41:09.453093  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,14 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-28 17:34:07,516 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n"
+      "2024-10-29 08:41:09,526 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n"
      ]
     },
     {
@@ -341,12 +360,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-28 17:34:08,051 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/1c01a94bea5948faabda HTTP/1.1\" 200 None\n",
-      "2024-10-28 17:34:08,067 - INFO - Getting inputstream 1c01a94bea5948faabda from A2G...\n",
-      "2024-10-28 17:34:08,070 - WARNING - Inputstream discovered\n",
-      "2024-10-28 17:34:08,076 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-28 17:34:08,561 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/1.1\" 200 None\n",
-      "2024-10-28 17:34:08,569 - INFO - batch 1, docs: [0 - 31] - 200 - {\"message\":\"Data Received Success, DataToy inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n"
+      "2024-10-29 08:41:09,942 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/1c01a94bea5948faabda HTTP/1.1\" 200 None\n",
+      "2024-10-29 08:41:09,952 - INFO - Getting inputstream 1c01a94bea5948faabda from A2G...\n",
+      "2024-10-29 08:41:09,955 - WARNING - Inputstream discovered\n",
+      "2024-10-29 08:41:09,964 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
+      "2024-10-29 08:41:10,962 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/1.1\" 200 None\n",
+      "2024-10-29 08:41:10,969 - INFO - batch 1, docs: [0 - 31] - 200 - {\"message\":\"Data Received Success, DataToy inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n"
      ]
     }
    ],
@@ -358,13 +377,6 @@
     "client.insert_data(IKEY, df_users.to_dict(\"records\"))\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
