--- a/notebooks/2.ETL_consolidator.ipynb
+++ b/notebooks/2.ETL_consolidator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,29 +27,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-28 17:34:24,364 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
-      "2024-10-28 17:34:24,803 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/1c01a94bea5948faabda HTTP/1.1\" 200 None\n",
-      "2024-10-28 17:34:24,814 - INFO - Getting inputstream 1c01a94bea5948faabda from A2G...\n",
-      "2024-10-28 17:34:24,817 - INFO - Downloading data from A2G...\n",
-      "2024-10-28 17:34:24,820 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-28 17:34:25,295 - DEBUG - https://v2streams.a2g.io:443 \"POST /QueryData/ExecutionPlanningFind HTTP/1.1\" 200 119\n",
-      "2024-10-28 17:34:25,296 - INFO - The query stages are COLLSCAN\n",
-      "2024-10-28 17:34:25,297 - INFO - The index used in query is None\n",
-      "2024-10-28 17:34:25,297 - INFO - Total documents to download 31.\n",
-      "2024-10-28 17:34:25,298 - INFO - Batch 0/1\n",
-      "2024-10-28 17:34:25,302 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-28 17:34:25,853 - DEBUG - https://v2streams.a2g.io:443 \"POST /QueryData/FindAll?page=1&pageSize=176470 HTTP/1.1\" 200 508\n",
-      "2024-10-28 17:34:25,861 - INFO - Batch 1/1\n",
-      "2024-10-28 17:34:25,861 - INFO - Data downloaded, total docs: 31\n",
-      "2024-10-28 17:34:25,863 - INFO - Caching data ... ikey: 1c01a94bea5948faabda, query: {\"start_on\": {\"$gte\": \"2024-10-28T20:00:00\"}, \"end_on\": {\"$lte\": \"2024-10-28T21:00:00\"}}\n",
-      "2024-10-28 17:34:25,874 - INFO - Data - Ikey: 1c01a94bea5948faabda, Data cached\n"
+      "2024-10-29 08:40:09,875 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
+      "2024-10-29 08:40:10,286 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/1c01a94bea5948faabda HTTP/11\" 200 None\n",
+      "2024-10-29 08:40:10,294 - INFO - Getting inputstream 1c01a94bea5948faabda from A2G...\n",
+      "2024-10-29 08:40:10,298 - INFO - Downloading data from A2G...\n",
+      "2024-10-29 08:40:10,303 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
+      "2024-10-29 08:40:10,897 - DEBUG - https://v2streams.a2g.io:443 \"POST /QueryData/ExecutionPlanningFind HTTP/11\" 200 119\n",
+      "2024-10-29 08:40:10,900 - INFO - The query stages are COLLSCAN\n",
+      "2024-10-29 08:40:10,900 - INFO - The index used in query is None\n",
+      "2024-10-29 08:40:10,901 - INFO - Total documents to download 31.\n",
+      "2024-10-29 08:40:10,902 - INFO - Batch 0/1\n",
+      "2024-10-29 08:40:10,904 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
+      "2024-10-29 08:40:11,325 - DEBUG - https://v2streams.a2g.io:443 \"POST /QueryData/FindAll?page=1&pageSize=176470 HTTP/11\" 200 496\n",
+      "2024-10-29 08:40:11,333 - INFO - Batch 1/1\n",
+      "2024-10-29 08:40:11,334 - INFO - Data downloaded, total docs: 31\n",
+      "2024-10-29 08:40:11,334 - INFO - Caching data ... ikey: 1c01a94bea5948faabda, query: {\"start_on\": {\"$gte\": \"2024-10-29T11:00:00\"}, \"end_on\": {\"$lte\": \"2024-10-29T12:00:00\"}}\n",
+      "2024-10-29 08:40:11,347 - INFO - Data - Ikey: 1c01a94bea5948faabda, Data cached\n"
      ]
     }
    ],
@@ -69,6 +69,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'John Doe',\n",
+       " 'role': 'admin',\n",
+       " 'machines': 'C303',\n",
+       " 'status': 'inactive',\n",
+       " 'ton': 86,\n",
+       " 'start_on': datetime.datetime(2024, 10, 29, 11, 0, 5, 531000),\n",
+       " 'end_on': datetime.datetime(2024, 10, 29, 11, 5, 5, 532000),\n",
+       " 'awhen': datetime.datetime(2024, 10, 29, 11, 5, 6, 156000)}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movements_data[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,24 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\DaniloAraneda\\AppData\\Local\\Temp\\ipykernel_49452\\3027444034.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
-      "  df_users = df_movements.groupby(by=\"name\").sum()\n",
-      "C:\\Users\\DaniloAraneda\\AppData\\Local\\Temp\\ipykernel_49452\\3027444034.py:3: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
-      "  df_machines = df_movements.groupby(by=\"machines\").sum()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_movements = pd.DataFrame(movements_data)\n",
-    "df_users = df_movements.groupby(by=\"name\").sum()\n",
-    "df_machines = df_movements.groupby(by=\"machines\").sum()\n",
+    "df_users = df_movements.groupby(by=\"name\")[[\"ton\"]].sum()\n",
+    "df_machines = df_movements.groupby(by=\"machines\")[[\"ton\"]].sum()\n",
     "\n",
     "df_machines.reset_index(inplace=True)\n",
     "df_users.reset_index(inplace=True)\n",
@@ -105,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,20 +154,20 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>C301</td>\n",
-       "      <td>628</td>\n",
-       "      <td>2024-10-28T20:00:00</td>\n",
+       "      <td>428</td>\n",
+       "      <td>2024-10-29T11:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>C302</td>\n",
-       "      <td>657</td>\n",
-       "      <td>2024-10-28T20:00:00</td>\n",
+       "      <td>808</td>\n",
+       "      <td>2024-10-29T11:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>C303</td>\n",
-       "      <td>629</td>\n",
-       "      <td>2024-10-28T20:00:00</td>\n",
+       "      <td>332</td>\n",
+       "      <td>2024-10-29T11:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -159,12 +175,12 @@
       ],
       "text/plain": [
        "  machines  ton                 time\n",
-       "0     C301  628  2024-10-28T20:00:00\n",
-       "1     C302  657  2024-10-28T20:00:00\n",
-       "2     C303  629  2024-10-28T20:00:00"
+       "0     C301  428  2024-10-29T11:00:00\n",
+       "1     C302  808  2024-10-29T11:00:00\n",
+       "2     C303  332  2024-10-29T11:00:00"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -208,38 +224,38 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Ahbraham Smith</td>\n",
-       "      <td>377</td>\n",
-       "      <td>2024-10-28T20:00:00</td>\n",
+       "      <td>240</td>\n",
+       "      <td>2024-10-29T11:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Jane Doe</td>\n",
-       "      <td>274</td>\n",
-       "      <td>2024-10-28T20:00:00</td>\n",
+       "      <td>282</td>\n",
+       "      <td>2024-10-29T11:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>John Doe</td>\n",
-       "      <td>226</td>\n",
-       "      <td>2024-10-28T20:00:00</td>\n",
+       "      <td>230</td>\n",
+       "      <td>2024-10-29T11:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>John Smith</td>\n",
-       "      <td>311</td>\n",
-       "      <td>2024-10-28T20:00:00</td>\n",
+       "      <td>235</td>\n",
+       "      <td>2024-10-29T11:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Richard Alfredo</td>\n",
-       "      <td>347</td>\n",
-       "      <td>2024-10-28T20:00:00</td>\n",
+       "      <td>300</td>\n",
+       "      <td>2024-10-29T11:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Smith Alfred</td>\n",
-       "      <td>379</td>\n",
-       "      <td>2024-10-28T20:00:00</td>\n",
+       "      <td>281</td>\n",
+       "      <td>2024-10-29T11:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -247,15 +263,15 @@
       ],
       "text/plain": [
        "              name  ton                 time\n",
-       "0   Ahbraham Smith  377  2024-10-28T20:00:00\n",
-       "1         Jane Doe  274  2024-10-28T20:00:00\n",
-       "2         John Doe  226  2024-10-28T20:00:00\n",
-       "3       John Smith  311  2024-10-28T20:00:00\n",
-       "4  Richard Alfredo  347  2024-10-28T20:00:00\n",
-       "5     Smith Alfred  379  2024-10-28T20:00:00"
+       "0   Ahbraham Smith  240  2024-10-29T11:00:00\n",
+       "1         Jane Doe  282  2024-10-29T11:00:00\n",
+       "2         John Doe  230  2024-10-29T11:00:00\n",
+       "3       John Smith  235  2024-10-29T11:00:00\n",
+       "4  Richard Alfredo  300  2024-10-29T11:00:00\n",
+       "5     Smith Alfred  281  2024-10-29T11:00:00"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,27 +289,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-28 17:34:36,676 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
-      "2024-10-28 17:34:37,108 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/574dd3c216924478a03e HTTP/1.1\" 200 None\n",
-      "2024-10-28 17:34:37,119 - INFO - Getting inputstream 574dd3c216924478a03e from A2G...\n",
-      "2024-10-28 17:34:37,121 - WARNING - Inputstream discovered\n",
-      "2024-10-28 17:34:37,124 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-28 17:34:37,580 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/1.1\" 200 None\n",
-      "2024-10-28 17:34:37,588 - INFO - batch 1, docs: [0 - 3] - 200 - {\"message\":\"Data Received Success, DataToyMachine inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n",
-      "2024-10-28 17:34:37,591 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
-      "2024-10-28 17:34:38,033 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/0fa6688ad39f4622bdd9 HTTP/1.1\" 200 None\n",
-      "2024-10-28 17:34:38,048 - INFO - Getting inputstream 0fa6688ad39f4622bdd9 from A2G...\n",
-      "2024-10-28 17:34:38,051 - WARNING - Inputstream discovered\n",
-      "2024-10-28 17:34:38,054 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-28 17:34:39,470 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/1.1\" 200 None\n",
-      "2024-10-28 17:34:40,460 - INFO - batch 1, docs: [0 - 6] - 200 - {\"message\":\"Data Received Success, DataToyUsers inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n"
+      "2024-10-29 08:40:49,363 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-29 08:40:50,754 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/574dd3c216924478a03e HTTP/11\" 200 None\n",
+      "2024-10-29 08:40:50,766 - INFO - Getting inputstream 574dd3c216924478a03e from A2G...\n",
+      "2024-10-29 08:40:50,768 - WARNING - Inputstream discovered\n",
+      "2024-10-29 08:40:50,771 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
+      "2024-10-29 08:40:51,965 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/11\" 200 None\n",
+      "2024-10-29 08:40:51,973 - INFO - batch 1, docs: [0 - 3] - 200 - {\"message\":\"Data Received Success, DataToyMachine inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n",
+      "2024-10-29 08:40:51,976 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
+      "2024-10-29 08:40:52,407 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/0fa6688ad39f4622bdd9 HTTP/11\" 200 None\n",
+      "2024-10-29 08:40:52,419 - INFO - Getting inputstream 0fa6688ad39f4622bdd9 from A2G...\n",
+      "2024-10-29 08:40:52,421 - WARNING - Inputstream discovered\n",
+      "2024-10-29 08:40:52,424 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
+      "2024-10-29 08:40:52,826 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/11\" 200 None\n",
+      "2024-10-29 08:40:52,833 - INFO - batch 1, docs: [0 - 6] - 200 - {\"message\":\"Data Received Success, DataToyUsers inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n"
      ]
     }
    ],
@@ -308,7 +330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
