--- a/notebooks/4.daily_report.ipynb
+++ b/notebooks/4.daily_report.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mongo_conn: None, mongo_db: None from cloud_inputstream.py\n",
+      "mongo_conn: None, mongo_db: None from init.py\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,14 +56,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-28 18:08:49,654 - INFO - Getting inputstream 0fa6688ad39f4622bdd9 from A2G...\n",
-      "2024-10-28 18:08:49,656 - INFO - Data - Ikey: 0fa6688ad39f4622bdd9, Checking cache expiration...\n",
-      "2024-10-28 18:08:49,657 - INFO - Data - Ikey: 0fa6688ad39f4622bdd9, Recovering data from cache...\n",
-      "2024-10-28 18:08:49,663 - INFO - Data - Ikey: 0fa6688ad39f4622bdd9, from cache\n",
-      "2024-10-28 18:08:50,113 - INFO - Getting inputstream 574dd3c216924478a03e from A2G...\n",
-      "2024-10-28 18:08:50,115 - INFO - Data - Ikey: 574dd3c216924478a03e, Checking cache expiration...\n",
-      "2024-10-28 18:08:50,116 - INFO - Data - Ikey: 574dd3c216924478a03e, Recovering data from cache...\n",
-      "2024-10-28 18:08:50,118 - INFO - Data - Ikey: 574dd3c216924478a03e, from cache\n"
+      "2024-10-29 08:42:00,975 - INFO - Getting inputstream 0fa6688ad39f4622bdd9 from A2G...\n",
+      "2024-10-29 08:42:00,979 - INFO - Downloading data from A2G...\n",
+      "2024-10-29 08:42:01,437 - INFO - The query stages are COLLSCAN\n",
+      "2024-10-29 08:42:01,438 - INFO - The index used in query is None\n",
+      "2024-10-29 08:42:01,439 - INFO - Total documents to download 6.\n",
+      "2024-10-29 08:42:01,439 - INFO - Batch 0/1\n",
+      "2024-10-29 08:42:01,867 - INFO - Batch 1/1\n",
+      "2024-10-29 08:42:01,868 - INFO - Data downloaded, total docs: 6\n",
+      "2024-10-29 08:42:01,869 - INFO - Caching data ... ikey: 0fa6688ad39f4622bdd9, query: {\"time\": {\"$gte\": \"2024-10-29T00:00:00\", \"$lte\": \"2024-10-30T00:00:00\"}}\n",
+      "2024-10-29 08:42:01,873 - INFO - Data - Ikey: 0fa6688ad39f4622bdd9, Data cached\n",
+      "2024-10-29 08:42:02,288 - INFO - Getting inputstream 574dd3c216924478a03e from A2G...\n",
+      "2024-10-29 08:42:02,290 - INFO - Downloading data from A2G...\n",
+      "2024-10-29 08:42:02,706 - INFO - The query stages are COLLSCAN\n",
+      "2024-10-29 08:42:02,707 - INFO - The index used in query is None\n",
+      "2024-10-29 08:42:02,707 - INFO - Total documents to download 3.\n",
+      "2024-10-29 08:42:02,708 - INFO - Batch 0/1\n",
+      "2024-10-29 08:42:03,132 - INFO - Batch 1/1\n",
+      "2024-10-29 08:42:03,133 - INFO - Data downloaded, total docs: 3\n",
+      "2024-10-29 08:42:03,133 - INFO - Caching data ... ikey: 574dd3c216924478a03e, query: {\"time\": {\"$gte\": \"2024-10-29T00:00:00\", \"$lte\": \"2024-10-30T00:00:00\"}}\n",
+      "2024-10-29 08:42:03,144 - INFO - Data - Ikey: 574dd3c216924478a03e, Data cached\n"
      ]
     }
    ],
@@ -87,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +197,7 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,23 +219,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uploaded ../reports/report_28-10-2024.pdf to reports/report_28-10-2024.pdf\n"
+      "Uploaded ../reports/report_29-10-2024.pdf to reports/report_29-10-2024.pdf\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'https://a2gv2-concept.s3.sa-east-1.amazonaws.com/reports/report_28-10-2024.pdf'"
+       "'https://a2gv2-concept.s3.sa-east-1.amazonaws.com/reports/report_29-10-2024.pdf'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,13 +259,6 @@
     "\n",
     "upload_file(f\"../reports/report_{time_now.strftime('%d-%m-%Y')}.pdf\", f\"reports/report_{time_now.strftime('%d-%m-%Y')}.pdf\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
