--- a/notebooks/2.ETL_consolidator.ipynb
+++ b/notebooks/2.ETL_consolidator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,29 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-29 08:40:09,875 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
-      "2024-10-29 08:40:10,286 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/1c01a94bea5948faabda HTTP/11\" 200 None\n",
-      "2024-10-29 08:40:10,294 - INFO - Getting inputstream 1c01a94bea5948faabda from A2G...\n",
-      "2024-10-29 08:40:10,298 - INFO - Downloading data from A2G...\n",
-      "2024-10-29 08:40:10,303 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-29 08:40:10,897 - DEBUG - https://v2streams.a2g.io:443 \"POST /QueryData/ExecutionPlanningFind HTTP/11\" 200 119\n",
-      "2024-10-29 08:40:10,900 - INFO - The query stages are COLLSCAN\n",
-      "2024-10-29 08:40:10,900 - INFO - The index used in query is None\n",
-      "2024-10-29 08:40:10,901 - INFO - Total documents to download 31.\n",
-      "2024-10-29 08:40:10,902 - INFO - Batch 0/1\n",
-      "2024-10-29 08:40:10,904 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-29 08:40:11,325 - DEBUG - https://v2streams.a2g.io:443 \"POST /QueryData/FindAll?page=1&pageSize=176470 HTTP/11\" 200 496\n",
-      "2024-10-29 08:40:11,333 - INFO - Batch 1/1\n",
-      "2024-10-29 08:40:11,334 - INFO - Data downloaded, total docs: 31\n",
-      "2024-10-29 08:40:11,334 - INFO - Caching data ... ikey: 1c01a94bea5948faabda, query: {\"start_on\": {\"$gte\": \"2024-10-29T11:00:00\"}, \"end_on\": {\"$lte\": \"2024-10-29T12:00:00\"}}\n",
-      "2024-10-29 08:40:11,347 - INFO - Data - Ikey: 1c01a94bea5948faabda, Data cached\n"
+      "2024-10-29 08:57:33,430 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
+      "2024-10-29 08:57:33,817 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/1c01a94bea5948faabda HTTP/11\" 200 None\n",
+      "2024-10-29 08:57:33,913 - INFO - Getting inputstream 1c01a94bea5948faabda from A2G...\n",
+      "2024-10-29 08:57:33,915 - INFO - Data - Ikey: 1c01a94bea5948faabda, Checking cache expiration...\n",
+      "2024-10-29 08:57:33,917 - INFO - Data - Ikey: 1c01a94bea5948faabda, Recovering data from cache...\n",
+      "2024-10-29 08:57:33,923 - INFO - Data - Ikey: 1c01a94bea5948faabda, from cache\n"
      ]
     }
    ],
@@ -70,29 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'John Doe',\n",
-       " 'role': 'admin',\n",
-       " 'machines': 'C303',\n",
-       " 'status': 'inactive',\n",
-       " 'ton': 86,\n",
-       " 'start_on': datetime.datetime(2024, 10, 29, 11, 0, 5, 531000),\n",
-       " 'end_on': datetime.datetime(2024, 10, 29, 11, 5, 5, 532000),\n",
-       " 'awhen': datetime.datetime(2024, 10, 29, 11, 5, 6, 156000)}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "movements_data[0]"
+    "if len(movements_data) == 0:\n",
+    "    logging.info(\"No movements found\")\n",
+    "    raise Exception(\"No movements found\")"
    ]
   },
   {
@@ -104,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +154,7 @@
        "2     C303  332  2024-10-29T11:00:00"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +245,7 @@
        "5     Smith Alfred  281  2024-10-29T11:00:00"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,33 +263,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-29 08:40:49,363 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-10-29 08:40:50,754 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/574dd3c216924478a03e HTTP/11\" 200 None\n",
-      "2024-10-29 08:40:50,766 - INFO - Getting inputstream 574dd3c216924478a03e from A2G...\n",
-      "2024-10-29 08:40:50,768 - WARNING - Inputstream discovered\n",
-      "2024-10-29 08:40:50,771 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-29 08:40:51,965 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/11\" 200 None\n",
-      "2024-10-29 08:40:51,973 - INFO - batch 1, docs: [0 - 3] - 200 - {\"message\":\"Data Received Success, DataToyMachine inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n",
-      "2024-10-29 08:40:51,976 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
-      "2024-10-29 08:40:52,407 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/0fa6688ad39f4622bdd9 HTTP/11\" 200 None\n",
-      "2024-10-29 08:40:52,419 - INFO - Getting inputstream 0fa6688ad39f4622bdd9 from A2G...\n",
-      "2024-10-29 08:40:52,421 - WARNING - Inputstream discovered\n",
-      "2024-10-29 08:40:52,424 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-29 08:40:52,826 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/11\" 200 None\n",
-      "2024-10-29 08:40:52,833 - INFO - batch 1, docs: [0 - 6] - 200 - {\"message\":\"Data Received Success, DataToyUsers inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n"
+      "2024-10-29 08:57:34,054 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
+      "2024-10-29 08:57:34,433 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/574dd3c216924478a03e HTTP/11\" 200 None\n",
+      "2024-10-29 08:57:34,444 - INFO - Getting inputstream 574dd3c216924478a03e from A2G...\n",
+      "2024-10-29 08:57:34,445 - WARNING - Inputstream discovered\n",
+      "2024-10-29 08:57:34,447 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
+      "2024-10-29 08:57:34,837 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/11\" 200 None\n",
+      "2024-10-29 08:57:34,845 - INFO - batch 1, docs: [0 - 3] - 200 - {\"message\":\"Data Received Success, DataToyMachine inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n",
+      "2024-10-29 08:57:34,847 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
+      "2024-10-29 08:57:35,253 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/0fa6688ad39f4622bdd9 HTTP/11\" 200 None\n",
+      "2024-10-29 08:57:35,260 - INFO - Getting inputstream 0fa6688ad39f4622bdd9 from A2G...\n",
+      "2024-10-29 08:57:35,261 - WARNING - Inputstream discovered\n",
+      "2024-10-29 08:57:35,263 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
+      "2024-10-29 08:57:35,683 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/11\" 200 None\n",
+      "2024-10-29 08:57:35,690 - INFO - batch 1, docs: [0 - 6] - 200 - {\"message\":\"Data Received Success, DataToyUsers inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n"
      ]
     }
    ],
