--- a/notebooks/4.daily_report.ipynb
+++ b/notebooks/4.daily_report.ipynb
@@ -257,7 +257,8 @@
     "    print (f\"Uploaded {local_path} to {key}\")\n",
     "    return f\"https://{s3_cred['BucketName']}.s3.{s3_cred['Region']}.amazonaws.com/{key}\"\n",
     "\n",
-    "upload_file(f\"../reports/report_{time_now.strftime('%d-%m-%Y')}.pdf\", f\"reports/report_{time_now.strftime('%d-%m-%Y')}.pdf\")"
+    "link = upload_file(f\"../reports/report_{time_now.strftime('%d-%m-%Y')}.pdf\", f\"reports/report_{time_now.strftime('%d-%m-%Y')}.pdf\")\n",
+    "print(link)"
    ]
   }
  ],
