--- a/notebooks/4.daily_report.ipynb
+++ b/notebooks/4.daily_report.ipynb
@@ -176,7 +176,8 @@
     "    rows_html_machine += row_html\n",
     "\n",
     "main_template_str = main_template_str.replace(\"__rows_user__\", rows_html_user)\n",
-    "main_template_str = main_template_str.replace(\"__rows_machine__\", rows_html_machine)\n"
+    "main_template_str = main_template_str.replace(\"__rows_machine__\", rows_html_machine)\n",
+    "main_template_str = main_template_str.replace(\"__day__\", time_now.strftime(\"%d/%m/%Y\"))\n"
    ]
   },
   {
