--- a/notebooks/1.ETL_status.ipynb
+++ b/notebooks/1.ETL_status.ipynb
@@ -2,35 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\DaniloAraneda\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "c:\\Users\\DaniloAraneda\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\.libs\\libopenblas.fb5ae2tyxyh2ijrdkgdgq3xbklktf43h.gfortran-win_amd64.dll\n",
-      "c:\\Users\\DaniloAraneda\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\.libs\\libopenblas64__v0.3.21-gcc_10_3_0.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mongo_conn: None, mongo_db: None from cloud_inputstream.py\n",
-      "mongo_conn: None, mongo_db: None from init.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "from a2ginputstream import A2GClient\n",
     "import random\n",
-    "import time\n",
-    "import datetime\n",
     "import logging\n",
     "\n",
     "logging.basicConfig(level=logging.DEBUG, format='%(asctime)s - %(levelname)s - %(message)s')"
@@ -45,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +118,7 @@
        "4  Richard Alfredo   user"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -231,51 +210,51 @@
        "      <th>0</th>\n",
        "      <td>John Doe</td>\n",
        "      <td>admin</td>\n",
-       "      <td>C303</td>\n",
-       "      <td>active</td>\n",
-       "      <td>96</td>\n",
-       "      <td>2024-10-29T11:36:09.452580</td>\n",
-       "      <td>2024-10-29T11:41:09.453093</td>\n",
+       "      <td>C302</td>\n",
+       "      <td>inactive</td>\n",
+       "      <td>67</td>\n",
+       "      <td>2024-11-25T16:48:41.612685</td>\n",
+       "      <td>2024-11-25T16:53:41.613248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Jane Doe</td>\n",
        "      <td>user</td>\n",
-       "      <td>C301</td>\n",
+       "      <td>C303</td>\n",
        "      <td>active</td>\n",
-       "      <td>21</td>\n",
-       "      <td>2024-10-29T11:36:09.452580</td>\n",
-       "      <td>2024-10-29T11:41:09.453093</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2024-11-25T16:48:41.612685</td>\n",
+       "      <td>2024-11-25T16:53:41.613248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>John Smith</td>\n",
        "      <td>user</td>\n",
        "      <td>C303</td>\n",
-       "      <td>error</td>\n",
-       "      <td>69</td>\n",
-       "      <td>2024-10-29T11:36:09.452580</td>\n",
-       "      <td>2024-10-29T11:41:09.453093</td>\n",
+       "      <td>inactive</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2024-11-25T16:48:41.612685</td>\n",
+       "      <td>2024-11-25T16:53:41.613248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Smith Alfred</td>\n",
        "      <td>user</td>\n",
        "      <td>C303</td>\n",
-       "      <td>error</td>\n",
-       "      <td>59</td>\n",
-       "      <td>2024-10-29T11:36:09.452580</td>\n",
-       "      <td>2024-10-29T11:41:09.453093</td>\n",
+       "      <td>inactive</td>\n",
+       "      <td>84</td>\n",
+       "      <td>2024-11-25T16:48:41.612685</td>\n",
+       "      <td>2024-11-25T16:53:41.613248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Richard Alfredo</td>\n",
        "      <td>user</td>\n",
-       "      <td>C303</td>\n",
-       "      <td>inactive</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2024-10-29T11:36:09.452580</td>\n",
-       "      <td>2024-10-29T11:41:09.453093</td>\n",
+       "      <td>C302</td>\n",
+       "      <td>active</td>\n",
+       "      <td>93</td>\n",
+       "      <td>2024-11-25T16:48:41.612685</td>\n",
+       "      <td>2024-11-25T16:53:41.613248</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -283,21 +262,21 @@
       ],
       "text/plain": [
        "              name   role machines    status  ton                    start_on  \\\n",
-       "0         John Doe  admin     C303    active   96  2024-10-29T11:36:09.452580   \n",
-       "1         Jane Doe   user     C301    active   21  2024-10-29T11:36:09.452580   \n",
-       "2       John Smith   user     C303     error   69  2024-10-29T11:36:09.452580   \n",
-       "3     Smith Alfred   user     C303     error   59  2024-10-29T11:36:09.452580   \n",
-       "4  Richard Alfredo   user     C303  inactive    0  2024-10-29T11:36:09.452580   \n",
+       "0         John Doe  admin     C302  inactive   67  2024-11-25T16:48:41.612685   \n",
+       "1         Jane Doe   user     C303    active   13  2024-11-25T16:48:41.612685   \n",
+       "2       John Smith   user     C303  inactive   23  2024-11-25T16:48:41.612685   \n",
+       "3     Smith Alfred   user     C303  inactive   84  2024-11-25T16:48:41.612685   \n",
+       "4  Richard Alfredo   user     C302    active   93  2024-11-25T16:48:41.612685   \n",
        "\n",
        "                       end_on  \n",
-       "0  2024-10-29T11:41:09.453093  \n",
-       "1  2024-10-29T11:41:09.453093  \n",
-       "2  2024-10-29T11:41:09.453093  \n",
-       "3  2024-10-29T11:41:09.453093  \n",
-       "4  2024-10-29T11:41:09.453093  "
+       "0  2024-11-25T16:53:41.613248  \n",
+       "1  2024-11-25T16:53:41.613248  \n",
+       "2  2024-11-25T16:53:41.613248  \n",
+       "3  2024-11-25T16:53:41.613248  \n",
+       "4  2024-11-25T16:53:41.613248  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,43 +289,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## simulate error ETL and long time process"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rand_error = random.randint(0, 100)\n",
-    "if rand_error < 30:\n",
-    "    print(\"error\")\n",
-    "    raise Exception(\"Error\")\n",
-    "\n",
-    "rand_ltp = random.randint(0, 100)\n",
-    "if rand_ltp < 30:\n",
-    "    for _ in range(0, 500):\n",
-    "        time.sleep(1) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## insert data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-29 08:41:09,526 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n"
+      "2024-11-25 13:53:43,951 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n"
      ]
     },
     {
@@ -360,19 +315,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-29 08:41:09,942 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/1c01a94bea5948faabda HTTP/1.1\" 200 None\n",
-      "2024-10-29 08:41:09,952 - INFO - Getting inputstream 1c01a94bea5948faabda from A2G...\n",
-      "2024-10-29 08:41:09,955 - WARNING - Inputstream discovered\n",
-      "2024-10-29 08:41:09,964 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-29 08:41:10,962 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/1.1\" 200 None\n",
-      "2024-10-29 08:41:10,969 - INFO - batch 1, docs: [0 - 31] - 200 - {\"message\":\"Data Received Success, DataToy inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n"
+      "2024-11-25 13:53:44,514 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/467c80c4471743808fb1 HTTP/1.1\" 200 None\n",
+      "2024-11-25 13:53:44,525 - INFO - Getting inputstream 467c80c4471743808fb1 from A2G...\n",
+      "2024-11-25 13:53:44,529 - WARNING - Inputstream discovered\n",
+      "2024-11-25 13:53:44,535 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
+      "2024-11-25 13:53:45,447 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/1.1\" 200 None\n",
+      "2024-11-25 13:53:45,477 - INFO - batch 1, docs: [0 - 31] - 200 - {\"message\":\"Data Received Success, ADanilo inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n"
      ]
     }
    ],
    "source": [
     "print(\"sending data...\")\n",
     "USER_PAT = \"8f8ff571c7344ce9b6fae09f1ff9c5b1\"\n",
-    "IKEY = \"1c01a94bea5948faabda\"\n",
+    "IKEY = \"467c80c4471743808fb1\"\n",
     "client = A2GClient(token=USER_PAT)\n",
     "client.insert_data(IKEY, df_users.to_dict(\"records\"))\n",
     "\n"
