--- a/notebooks/2.ETL_consolidator.ipynb
+++ b/notebooks/2.ETL_consolidator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,46 +27,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-29 08:57:33,430 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
-      "2024-10-29 08:57:33,817 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/1c01a94bea5948faabda HTTP/11\" 200 None\n",
-      "2024-10-29 08:57:33,913 - INFO - Getting inputstream 1c01a94bea5948faabda from A2G...\n",
-      "2024-10-29 08:57:33,915 - INFO - Data - Ikey: 1c01a94bea5948faabda, Checking cache expiration...\n",
-      "2024-10-29 08:57:33,917 - INFO - Data - Ikey: 1c01a94bea5948faabda, Recovering data from cache...\n",
-      "2024-10-29 08:57:33,923 - INFO - Data - Ikey: 1c01a94bea5948faabda, from cache\n"
+      "2024-11-25 13:55:46,083 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
+      "2024-11-25 13:55:47,545 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/467c80c4471743808fb1 HTTP/1.1\" 200 None\n",
+      "2024-11-25 13:55:47,580 - INFO - Getting inputstream 467c80c4471743808fb1 from A2G...\n",
+      "2024-11-25 13:55:47,580 - INFO - Data - Ikey: 467c80c4471743808fb1, Checking cache expiration...\n",
+      "2024-11-25 13:55:47,585 - INFO - Data - Ikey: 467c80c4471743808fb1, Recovering data from cache...\n",
+      "2024-11-25 13:55:47,595 - INFO - Data - Ikey: 467c80c4471743808fb1, from cache\n"
      ]
     }
    ],
    "source": [
-    "USER_PAT, IKEY = \"8f8ff571c7344ce9b6fae09f1ff9c5b1\", \"1c01a94bea5948faabda\"\n",
+    "USER_PAT, IKEY = \"714091e2f8474eb9b60a7fd6429cfb2a\", \"467c80c4471743808fb1\"\n",
     "client = A2GClient(token=USER_PAT)\n",
+    "\n",
+    "# {\"start_on\": {\"$gte\":start_hour}, \"end_on\":{\"$lte\":end_hour}}\n",
+    "movements_data:list[dict] = client.find(IKEY, {}, delete_id=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# USER_PAT, IKEY = \"8f8ff571c7344ce9b6fae09f1ff9c5b1\", \"1c01a94bea5948faabda\"\n",
+    "# client = A2GClient(token=USER_PAT)\n",
     "time_now = datetime.utcnow().replace(\n",
     "    microsecond=0,\n",
     "    second=0,\n",
     "    minute=0\n",
     ")\n",
     "\n",
-    "start_hour = time_now\n",
-    "end_hour = time_now + timedelta(hours=1)\n",
+    "# start_hour = time_now\n",
+    "# end_hour = time_now + timedelta(hours=1)\n",
     "\n",
-    "movements_data:list[dict] = client.find(IKEY, {\"start_on\": {\"$gte\":start_hour}, \"end_on\":{\"$lte\":end_hour}}, delete_id=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if len(movements_data) == 0:\n",
-    "    logging.info(\"No movements found\")\n",
-    "    raise Exception(\"No movements found\")"
+    "# # {\"start_on\": {\"$gte\":start_hour}, \"end_on\":{\"$lte\":end_hour}}\n",
+    "# movements_data:list[dict] = client.find(IKEY, {}, delete_id=True)"
    ]
   },
   {
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -128,33 +131,33 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>C301</td>\n",
-       "      <td>428</td>\n",
-       "      <td>2024-10-29T11:00:00</td>\n",
+       "      <td>1464</td>\n",
+       "      <td>2024-11-25T16:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>C302</td>\n",
-       "      <td>808</td>\n",
-       "      <td>2024-10-29T11:00:00</td>\n",
+       "      <td>908</td>\n",
+       "      <td>2024-11-25T16:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>C303</td>\n",
-       "      <td>332</td>\n",
-       "      <td>2024-10-29T11:00:00</td>\n",
+       "      <td>618</td>\n",
+       "      <td>2024-11-25T16:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  machines  ton                 time\n",
-       "0     C301  428  2024-10-29T11:00:00\n",
-       "1     C302  808  2024-10-29T11:00:00\n",
-       "2     C303  332  2024-10-29T11:00:00"
+       "  machines   ton                 time\n",
+       "0     C301  1464  2024-11-25T16:00:00\n",
+       "1     C302   908  2024-11-25T16:00:00\n",
+       "2     C303   618  2024-11-25T16:00:00"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -198,38 +201,38 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Ahbraham Smith</td>\n",
-       "      <td>240</td>\n",
-       "      <td>2024-10-29T11:00:00</td>\n",
+       "      <td>654</td>\n",
+       "      <td>2024-11-25T16:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Jane Doe</td>\n",
-       "      <td>282</td>\n",
-       "      <td>2024-10-29T11:00:00</td>\n",
+       "      <td>560</td>\n",
+       "      <td>2024-11-25T16:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>John Doe</td>\n",
-       "      <td>230</td>\n",
-       "      <td>2024-10-29T11:00:00</td>\n",
+       "      <td>444</td>\n",
+       "      <td>2024-11-25T16:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>John Smith</td>\n",
-       "      <td>235</td>\n",
-       "      <td>2024-10-29T11:00:00</td>\n",
+       "      <td>566</td>\n",
+       "      <td>2024-11-25T16:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Richard Alfredo</td>\n",
-       "      <td>300</td>\n",
-       "      <td>2024-10-29T11:00:00</td>\n",
+       "      <td>494</td>\n",
+       "      <td>2024-11-25T16:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Smith Alfred</td>\n",
-       "      <td>281</td>\n",
-       "      <td>2024-10-29T11:00:00</td>\n",
+       "      <td>272</td>\n",
+       "      <td>2024-11-25T16:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -237,15 +240,15 @@
       ],
       "text/plain": [
        "              name  ton                 time\n",
-       "0   Ahbraham Smith  240  2024-10-29T11:00:00\n",
-       "1         Jane Doe  282  2024-10-29T11:00:00\n",
-       "2         John Doe  230  2024-10-29T11:00:00\n",
-       "3       John Smith  235  2024-10-29T11:00:00\n",
-       "4  Richard Alfredo  300  2024-10-29T11:00:00\n",
-       "5     Smith Alfred  281  2024-10-29T11:00:00"
+       "0   Ahbraham Smith  654  2024-11-25T16:00:00\n",
+       "1         Jane Doe  560  2024-11-25T16:00:00\n",
+       "2         John Doe  444  2024-11-25T16:00:00\n",
+       "3       John Smith  566  2024-11-25T16:00:00\n",
+       "4  Richard Alfredo  494  2024-11-25T16:00:00\n",
+       "5     Smith Alfred  272  2024-11-25T16:00:00"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,52 +256,11 @@
    "source": [
     "df_users"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Save in inputstream"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-10-29 08:57:34,054 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
-      "2024-10-29 08:57:34,433 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/574dd3c216924478a03e HTTP/11\" 200 None\n",
-      "2024-10-29 08:57:34,444 - INFO - Getting inputstream 574dd3c216924478a03e from A2G...\n",
-      "2024-10-29 08:57:34,445 - WARNING - Inputstream discovered\n",
-      "2024-10-29 08:57:34,447 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-29 08:57:34,837 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/11\" 200 None\n",
-      "2024-10-29 08:57:34,845 - INFO - batch 1, docs: [0 - 3] - 200 - {\"message\":\"Data Received Success, DataToyMachine inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n",
-      "2024-10-29 08:57:34,847 - DEBUG - Starting new HTTPS connection (1): v2apigateway.a2g.io:443\n",
-      "2024-10-29 08:57:35,253 - DEBUG - https://v2apigateway.a2g.io:443 \"GET /Inputstream/Ikey/0fa6688ad39f4622bdd9 HTTP/11\" 200 None\n",
-      "2024-10-29 08:57:35,260 - INFO - Getting inputstream 0fa6688ad39f4622bdd9 from A2G...\n",
-      "2024-10-29 08:57:35,261 - WARNING - Inputstream discovered\n",
-      "2024-10-29 08:57:35,263 - DEBUG - Starting new HTTPS connection (1): v2streams.a2g.io:443\n",
-      "2024-10-29 08:57:35,683 - DEBUG - https://v2streams.a2g.io:443 \"POST /Data/Insert HTTP/11\" 200 None\n",
-      "2024-10-29 08:57:35,690 - INFO - batch 1, docs: [0 - 6] - 200 - {\"message\":\"Data Received Success, DataToyUsers inputstream\",\"data\":null,\"success\":true,\"errors\":null}\n"
-     ]
-    }
-   ],
-   "source": [
-    "IKEY_machine = \"574dd3c216924478a03e\"\n",
-    "client.insert_data(IKEY_machine, df_machines.to_dict(orient=\"records\"))\n",
-    "\n",
-    "IKEY_users = \"0fa6688ad39f4622bdd9\"\n",
-    "client.insert_data(IKEY_users, df_users.to_dict(orient=\"records\"))"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
